--- a/client/src/css/App.css
+++ b/client/src/css/App.css
@@ -2,27 +2,35 @@
     padding: 10px;
   }
   
-  .profile {
+.profile {
     text-align: left;
     margin-bottom: 10px;
   }
-  
-  .profile-image {
-    width: 195px;
-  }
-  
-  .profile-name {
+.profile-name {
+    text-align: left;
     font-size: 33px;
   }
   
-  .navigation {
+.navigation {
     text-align: center;
+    margin-right: 100px;
+    margin-bottom: auto;
   }
   
-  .body {
-    max-width: 700px;
-    margin-top: 20px;
+.body {
+    max-width: 800px;
+    margin-top: 150px;
     margin-left: auto;
     margin-right: auto;
     font-size: 16px;
   }
+.profile-image {
+    width: 205px;
+    float: right;
+
+    margin: 10px 10px 30px 0;
+    padding: 20px;
+    shape-outside: circle();
+    border-radius: 100%;
+  }
+
