changes in navbar

--- a/client/src/css/App.css
+++ b/client/src/css/App.css
@@ -7,14 +7,13 @@
     margin-bottom: 10px;
   }
 .profile-name {
-    text-align: left;
+    text-align: center;
     font-size: 33px;
-    padding-top: 100px;
   }
   
 .navigation {
     text-align: center;
-    padding-top: 100px;
+    padding-top: 80px;
 
   }
   
