--- a/client/src/css/App.css
+++ b/client/src/css/App.css
@@ -26,10 +26,10 @@
   }
 .profile-image {
     width: 205px;
-    float: right;
+    /* float: right;
     margin: 10px 10px 30px 0;
     padding: 20px;
     shape-outside: circle();
-    border-radius: 100%;
+    border-radius: 100%; */
   }
 
