--- a/client/src/css/App.css
+++ b/client/src/css/App.css
@@ -3,33 +3,34 @@
   }
   
 .profile {
-    text-align: center;
+    text-align: left;
     margin-bottom: 10px;
   }
 .profile-name {
     text-align: center;
     font-size: 33px;
+    padding-top: 50px; 
   }
   
 .navigation {
     text-align: center;
-    padding-top: 80px;
 
   }
   
 .body {
-    max-width: 800px;
-    margin-top: 150px;
+    max-width: 880px;
+    margin-top: 80px;
     margin-left: auto;
     margin-right: auto;
     font-size: 16px;
   }
 .profile-image {
-    width: 205px;
-    /* float: right;
-    margin: 10px 10px 30px 0;
-    padding: 20px;
+    text-align: left;
     shape-outside: circle();
-    border-radius: 100%; */
+    float: left;
+    width: 250px;
+    margin: 100px 10px 20px 20;
+    padding: 20px 20px 20px 20px;
+    border-radius: 100%;
   }
 
