--- a/client/src/css/App.css
+++ b/client/src/css/App.css
@@ -25,12 +25,12 @@
     font-size: 16px;
   }
 .profile-image {
-    text-align: left;
+    text-align: right;
     shape-outside: circle();
-    float: left;
+    float: right;
     width: 250px;
-    margin: 100px 10px 20px 20;
-    padding: 20px 20px 20px 20px;
-    border-radius: 100%;
+    margin: 100px 30px 30px 30px;
+    padding: 0px 20px 20px 20px;
+    border-radius: 100%; 
   }
 
